2008-04-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #528817

	* e-plugin.c (e_plugin_register_type):
	Fix a typo in the logic.  This might explain why I occasionally
	find Exchange Operations disabled on startup.

2008-03-17  Alex Rostovtsev  <tetromino@gmail.com>

	** Fix for bug #522631

	* e-profile-event.c: Make 'e_profile_event_emit' non-static when 
	ENABLE_PROFILING is defined.

2008-02-19  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #209353

	* e-text-event-processor-emacs-like.c:
	(e_text_event_processor_emacs_like_event):
	Allow paste text on mouse middle button click.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* e-config.c: (ep_finalise): Use proper member to free.

2008-02-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #509741

	* e-error.c (e_error_newv):
	If the error dialog has no primary text, fallback to the window
	title for the "primary" data key.  This is what gets displayed
	in the status bar.

	* e-error.c (e_error_count_buttons):
	New function counts buttons in a dialog's action area.

2008-01-24  Tor Lillqvist  <tml@novell.com>

	* e-icon-factory.c (e_icon_factory_init): Construct pathname under
	EVOLUTION_DATADIR at run-time because EVOLUTION_DATADIR is a
	function call on Windows.

2008-01-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488213

	* e-icon-factory.h: (e_icon_factory_pixbuf_scale):
	* e-icon-factory.c: (e_icon_factory_pixbuf_scale):
	New global function for pixbuf scaling which speeds up scaling when
	HAVE_LIBGNOMEUI_GNOME_THUMBNAIL_H.
	* e-icon-factory.c: (load_icon):
	Use global function e_icon_factory_pixbuf_scale for scaling pixbufs.

2008-01-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #211353

	* Makefile.am:
	* e-util-labels.h:
	* e-util-labels.c: New files to work with labels.

2008-01-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #507363

	* e-cursor.c: (e_cursor_set):
	Also check if toplevel widget has non-NULL window property.
